--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-loader-spinner": "^3.1.14",
     "react-scripts": "3.4.3",
     "styled-components": "^5.1.1",
     "typescript": "~3.7.2"
@@ -39,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-loader-spinner": "^3.1.0",
     "@types/styled-components": "^5.1.2"
   }
 }
